# alist-fuse

./: Cargo.toml  Dockerfile  LICENSE  README.md  systemd.service
.github/workflows/: Delflows.yml  Linux-Docker.yml  Linux-other.yml  Linux.yml  Macos.yml  Openwrt.yml  Release.yml  test.yml
openwrt/alist-fuse/: Makefile
openwrt/alist-fuse/files/: alist-fuse.init  pikpak-fuse.config  pikpak-fuse.init
openwrt/luci-app-alist-fuse/: Makefile
openwrt/luci-app-alist-fuse/luasrc/controller/: pikpak-fuse.lua
openwrt/luci-app-alist-fuse/luasrc/model/cbi/pikpak-fuse/: client.lua  log.lua
openwrt/luci-app-alist-fuse/luasrc/view/alist-fuse/: alist-fuse_log.htm  alist-fuse_status.htm
openwrt/luci-app-alist-fuse/po/zh-cn/: pikpak-fuse.po
openwrt/luci-app-alist-fuse/root/etc/uci-defaults/: luci-pikpak-fuse
openwrt/luci-app-alist-fuse/root/usr/share/rpcd/acl.d/: luci-app-pikpak-fuse.json
snap/: snapcraft.yaml
src/: cache.rs  error.rs  file_cache.rs  main.rs  vfs.rs
src/drive/: mod.rs  model.rs
